--- a/pages/bio_fr.html
+++ b/pages/bio_fr.html
@@ -30,7 +30,7 @@
         <tr class="txtpf"> 
           <td colspan="2" valign="top"> <p>&nbsp;</p>
             <p><span class="nom">St&eacute;phanie Morissette</span></p>
-            <p>N&eacute;e en 1977 &agrave; Thetford Mines, vit et travaille &agrave; 
+            <p>N&eacute;e en 1977 &agrave; Thetford Mines, vit et travaille &agrave; Sherbrooke et
               Montr&eacute;al. </p>
             <p class="nom">&Eacute;DUCATION</p>
             <p>2013 Certificat en sc&eacute;narisation, Universit&eacute; du Qu&eacute;bec 
@@ -43,7 +43,9 @@
               1996 Dipl&ocirc;me d&#8217;&eacute;tudes coll&eacute;giales (DEC), 
               Arts Plastiques, C&eacute;gep Marie-Victorin, Montr&eacute;al.</p>
             <p class="nom">PERFECTIONNEMENTS</p>
-            <p>2013 Atelier impression num&eacute;rique, Atelier Graff, Montr&eacute;al.<br>
+            <p>
+			  2014 After Effects workshop with Marie-Jos&eacute;e St-Pierre, Vid&eacute;ographe.<br>
+			  2013 Atelier impression num&eacute;rique, Atelier Graff, Montr&eacute;al.<br>
               2012 Atelier sur le Pop-up avec Colette Fu, Atelier Graff, Montr&eacute;al.<br>
               2011 Atelier de sc&eacute;narisation, MainFilm, Montr&eacute;al.<br>
               2008-2009 Atelier de monotype manuel avec Adeline Rognon, Montr&eacute;al.<br>
@@ -55,7 +57,11 @@
               Montr&eacute;al.</p>
             <p><br>
               <span class="nom">EXPOSITIONS INDIVIDUELLES</span></p>
-            <p>2009 Histoires, Robert Phillips Gallery, Walton-on-Thames, Angleterre.<br>
+            <p>
+			  2016	L'inqui&egrave;te for&ecirc;t, Maison de la culture Brompton, Sherbrooke.<br>
+			  2016 L'inqui&egrave;te for&ecirc;t,  Maison de la culture Notre-Dame-de-Gr&agrave;ce, Montr&eacute;al.<br>
+			  2015 L'inqui&egrave;te for&ecirc;t, <u><a href=http://www.galeriedominiquebouffard.com/>Galerie Dominique Bouffard</a> </u> Montr&eacute;al.<br>
+			  2009 Histoires, Robert Phillips Gallery, Walton-on-Thames, Angleterre.<br>
               2009 Vide?, Maison de la culture Frontenac, Montr&eacute;al.<br>
               2007 Histoires, Centre National d&#8217;&Eacute;xposition de Jonqui&egrave;re.<br>
               2004 Open Studio, Tapiola Guest Studio, Espoo, Finlande.<br>
@@ -64,7 +70,14 @@
               2003 Open Studio, Straumur Art Commune, Hafnarjordur, Islande.<br>
               2001 Attitudes, Galerie Les Modernes, &Eacute;difice Belgo, Montr&eacute;al.</p>
             <p class="nom">EXPOSITIONS COLLECTIVES</p>
-            <p>2014 Vide?, (duo avec Andrzej Maciejewski) Voix Visuelles, Ottawa.<br>
+            <p>
+			  2016	Salon du Printemps, Fine-Art Museum of Sherbrooke.<br>
+			  2016	Pur Dessin, Maison de la Culture C&ocirc;tes-des-Neiges, Montr&eacute;al. Curators: Camila Vasquez & Claudette Lemay (catalogue).<br>
+			  2015	Art et narration, Galerie Dominique Bouffard, Montr&eacute;al. (catalogue)<br>
+			  2015	Constellations, Centre National d'Exposition, Jonqui&eacute;re.<br>
+			  2014	Pur Dessin, La Chaufferie, Montr&eacute;al. Curators: Camila Vasquez & Claudette Lemay (catalogue).	<br>
+		      	
+			  2014 Vide?, (duo avec Andrzej Maciejewski) Voix Visuelles, Ottawa.<br>
               2013 Cynisme, Concours International d&#8217;Arts Visuels Juste 
               Pour Rire, Place des spectacles, Montr&eacute;al.<br>
               2013 Constellations, Maison de la Culture Frontenac, Montr&eacute;al.<br>
@@ -93,7 +106,9 @@
               2004 Here We Are. Where? Galeria Slodownia Stary Browar, Poznan, 
               Pologne. Commissaire : Krzysztof Lukomski (catalogue)</p>
             <p class="nom">&Eacute;V&Eacute;NEMENTS</p>
-            <p>2014 L&#8217;amour par c&#339;ur, Vid&eacute;ographe, Montr&eacute;al.<br>
+            <p>
+			  2014 PAPIER, Foire d'art contemporain d'&#339;uvres sur papier, galerie Dominique Bouffard, Montr&eacute;al.<br>
+			  2014 L&#8217;amour par c&#339;ur, Vid&eacute;ographe, Montr&eacute;al.<br>
               2013 Expozine, salon d&#8217;&eacute;diteurs ind&eacute;pendants 
               (bande dessin&eacute;e et fanzines), Montr&eacute;al.<br>
               2013 La Vir&eacute;e des ateliers, P&ocirc;le Parthenais, coop Lezarts, 
@@ -117,7 +132,9 @@
               Qu&eacute;bec.</p>
             <p><br>
               <span class="nom">R&Eacute;SIDENCE D'ARTISTE</span></p>
-            <p>2011 Projet Constellations, La Chaufferie, Montr&eacute;al (1 mois).<br>
+            <p>
+			  2014	Exp&eacute;rimentations et Pop-Up, La Chaufferie, Montr&eacute;al (15 jours). <br>
+			  2011 Projet Constellations, La Chaufferie, Montr&eacute;al (1 mois).<br>
               2007 New Works, Banff Art Center, Alberta (2 mois).<br>
               2004 Tapiola Guest Studio Espoo, Finlande (4 mois).<br>
               2002 Straumur Art Commune, Hafnarjordur, Islande (2 mois).</p>
@@ -154,7 +171,9 @@
               2000 Bourse Sans Date Fixe de Production et R&eacute;alisation Ind&eacute;pendante 
               de Montr&eacute;al (PRIM). </p>
             <p class="nom">BIBLIOGRAPHIE</p>
-            <p>Verville, Julie-Andr&eacute;e. &laquo; Deux expositions portant 
+            <p>
+			  Levy, Bernard, &laquo; For&ecirc;t Noire &raquo;, Vie des Arts, Montr&eacute;al, Octobre 2015, p.15.<br>
+			  Verville, Julie-Andr&eacute;e. &laquo; Deux expositions portant 
               &agrave; r&eacute;fl&eacute;chir &raquo;, Le Manic, Baie Comeau, 
               10 avril 2013, p.42-43.<br>
               Delgado, J&eacute;r&ocirc;me. &laquo; De nid de couturi&egrave;res 
